# Storages-shapes

./: .gitignore  ABC.h  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Array/: DictArray.h  DictPara.h
BinTree/: AVLTree.h  BinTree.h  DictAVL.h  DictBin.h  DictPara.h
List/: ABC.h  DictList.h  list.h
Storage/: DictStorage.h
test/: CMakeLists.txt  test.cc
